--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ html, html * {
 	margin-top: 3vw;
 }
 
-#truth-table {
+#truth-table, .table-border {
 	border-collapse: collapse;
 	width: 15%;
 	padding: 2.5%;
@@ -63,7 +63,6 @@ html, html * {
 	width: 1em;
 
 }
-
 .standard-border {
 	border-style: solid;
 	border-color: black;
