--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@
 
 html {
 	height: 100%;
-/*	background-repeat: no-repeat;
-	background-image: linear-gradient(#8d9ec6, 30%, #247191);*/
 	background-color: #11253f;
+	min-width: 700px;
+
 }
 
 html, html * {
@@ -36,18 +36,20 @@ html, html * {
 	 * 	make scalability of words look better;
 	 * 	keeps on cutting past box
 	 */
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
 	padding: 20px;
-	width: 15%;
 	text-align: left;
 }
 
-#input-text-fields *, .output-value {
+.output-value {
 	text-align: center;
 	float: right;
 	margin: auto;
 }
 
-#genBody {
+.body {
 	height: 100%;
 	width: 90%;
 	border-radius: 5px;
@@ -56,6 +58,12 @@ html, html * {
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 3vw;
+}
+
+.inputs-container {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
 }
 
 #truth-table, .table-border {
@@ -92,7 +100,9 @@ html, html * {
 	padding: 1em;
 	background-color: rgba(0, 0, 0, .025);
 }
-
+.implicant-output, .implicant-output *{
+	display: inline;
+}
 
 .flex-container-single-output {
 	display: flex;
